# drf-api-permissions-postgres

./: docker-compose.yml  manage.py  pyproject.toml  requirements.txt
drf_api_premissions_postgres_project/: Dockerfile  asgi.py  settings.py  urls.py  wsgi.py
drf_api_premissions_postgres_project/drf_api_premissions_postgres_project/: settings.py  urls.py
posts/: models.py  permissions.py  serializers.py  tests.py  views.py
