[tool.poetry]
name = "drf-api-premissions-postgres"
version = "0.1.0"
description = ""
authors = ["Yonatan Palagashvili <yonimotek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
sqlparse = "^0.4.1"
pytz = "^2020.4"
psycopg2-binary = "^2.8.6"
docker = "^4.4.1"
docker-compose = "^1.27.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
